syntax = "proto3";

package mangahub;

option go_package = "mangahub/proto";

// Service definition
service MangaService {
  rpc GetManga(GetMangaRequest) returns (MangaResponse);
  rpc SearchManga(SearchRequest) returns (SearchResponse);
  rpc UpdateProgress(ProgressRequest) returns (ProgressResponse);
}

// Request/Response messages
message GetMangaRequest {
  string id = 1;
}

message MangaResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  repeated string genres = 4;
  string status = 5;
  int32 total_chapters = 6;
  string description = 7;
}

message SearchRequest {
  string query = 1;
  string genre = 2;
  string status = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message SearchResponse {
  repeated MangaResponse results = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ProgressRequest {
  string user_id = 1;
  string manga_id = 2;
  int32 current_chapter = 3;
  string status = 4;
}

message ProgressResponse {
  bool success = 1;
  string message = 2;
}